# nrf-ffb-controller

./: CMakeLists.txt  app.overlay  prj.conf
src/: main.c
